base/src/test/resources/failure/holes/scope-check.aya.txt
In file $FILE:5:45 ->

  3 |   
  4 |   // https://cstheory.stackexchange.com/a/49160/50892
  5 |   def test (a : _) (B : Type) (b : B) (p : a = b) : I => 0
    |                                                ^^

Error: The solution
         B
       is not well-scoped
       In particular, these variables are not in scope: `B`

In file $FILE:5:14 ->

  3 |   
  4 |   // https://cstheory.stackexchange.com/a/49160/50892
  5 |   def test (a : _) (B : Type) (b : B) (p : a = b) : I => 0
    |                 ^^

Error: Unsolved meta _

In file $FILE:5:14 ->

  3 |   
  4 |   // https://cstheory.stackexchange.com/a/49160/50892
  5 |   def test (a : _) (B : Type) (b : B) (p : a = b) : I => 0
    |                 ^^

Error: Unsolved meta _
       in `(=) {_}`
       in `(=) {_} a`
       in `(=) {_} a b`

3 error(s), 0 warning(s).
What are you doing?
